--- a/index.html
+++ b/index.html
@@ -318,6 +318,8 @@
         }
 
         .c22 {
+            display: flex;
+            justify-content: center;
             background-color: #ffffff;
             max-width: 468pt;
             padding: 0pt 72pt 0pt 72pt
