--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
         <tr class="c18">
             <td class="c15" colspan="1" rowspan="1">
                 <p class="c12"><span class="c17"><a class="c7"
-                            href="https://www.google.com/url?q=http://calendar.google.com/calendar/embed?src%3Dee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%2540group.calendar.google.com%26ctz%3DEurope%252FBerlin&amp;sa=D&amp;source=editors&amp;ust=1710538872657890&amp;usg=AOvVaw2eD6dh4ZToweYYR3ycaGfG">Klick</a></span>
+                            href="http://calendar.google.com/calendar/embed?src%3Dee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%2540group.calendar.google.com%26ctz%3DEurope%252FBerlin">Klick</a></span>
                 </p>
                 <p class="c13"><span
                         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 106.79px; height: 103.85px;"><img
@@ -510,7 +510,7 @@
             </td>
             <td class="c21" colspan="1" rowspan="1">
                 <p class="c12"><span class="c17"><a class="c7"
-                            href="https://www.google.com/url?q=http://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%2540group.calendar.google.com/public/basic.ics&amp;sa=D&amp;source=editors&amp;ust=1710538872658847&amp;usg=AOvVaw2-qvE209SlUxYzJcp4c77R">Klick
+                            href="http://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%2540group.calendar.google.com/public/basic.ics">Klick
                             to Download</a></span></p>
                 <p class="c13"><span
                         style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 107.15px; height: 102.73px;"><img
