little more responsive ?

--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@
 
         .c22 {
             background-color: #ffffff;
-            max-width: 468pt;
+            width: 90vw;
+            max-width: 75ch;
+            /*468pt;*/
             padding: 0pt 72pt 0pt 72pt
         }
 
