--- a/index.html
+++ b/index.html
@@ -504,11 +504,11 @@
             <tr class="c18">
                 <td class="c15" colspan="1" rowspan="1">
                     <p class="c12"><span class="c17"><a class="c7"
-                                href="https://calendar.google.com/calendar/embed?src%3Dee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%2540group.calendar.google.com%26ctz%3DEurope%252FBerlin">Klick</a></span>
+                                href="https://calendar.google.com/calendar/embed?src=ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com&ctz=Europe%2FBerlin">Klick</a></span>
                     </p>
                     <p class="c13"><span
                             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 106.79px; height: 103.85px;"><a
-                                href="https://calendar.google.com/calendar/embed?src%3Dee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%2540group.calendar.google.com%26ctz%3DEurope%252FBerlin"><img
+                                href="https://calendar.google.com/calendar/embed?src=ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com&ctz=Europe%2FBerlin"><img
                                     alt="" src="images/image1.png"
                                     style="width: 106.79px; height: 106.35px; margin-left: 0.00px; margin-top: -1.25px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                                     title=""></a></span></p>
@@ -523,7 +523,7 @@
                 </td>
                 <td class="c21" colspan="1" rowspan="1">
                     <p class="c12"><span class="c17"><a class="c7"
-                                href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%2540group.calendar.google.com/public/basic.ics">Klick
+                                href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics">Klick
                                 to Download</a></span></p>
                     <p class="c13"><span
                             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 107.15px; height: 102.73px;"><a
