--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style type="text/css">
         ol {
             margin: 0;
@@ -509,7 +510,7 @@
                     <p class="c13"><span
                             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 106.79px; height: 103.85px;"><a
                                 href="https://calendar.google.com/calendar/embed?src=ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com&ctz=Europe%2FBerlin"><img
-                                    alt="" src="images/image1.png"
+                                    alt="" src="images/gcal_icon.png"
                                     style="width: 106.79px; height: 106.35px; margin-left: 0.00px; margin-top: -1.25px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                                     title=""></a></span></p>
                 </td>
@@ -517,7 +518,7 @@
                     <p class="c12"><span class="c5">Hold &amp; Open</span></p>
                     <p class="c13"><span
                             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 108.26px; height: 105.41px;"><img
-                                alt="" src="images/image3.png"
+                                alt="" src="images/cal_qr-code.png"
                                 style="width: 108.26px; height: 107.95px; margin-left: 0.00px; margin-top: -1.27px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                                 title=""></span></p>
                 </td>
@@ -528,7 +529,7 @@
                     <p class="c13"><span
                             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 107.15px; height: 102.73px;"><a
                                 href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics"><img
-                                    alt="" src="images/image2.png"
+                                    alt="" src="images/cal_icon.png"
                                     style="width: 107.15px; height: 105.19px; margin-left: 0.00px; margin-top: -1.23px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                                     title=""></a></span></p>
                 </td>
@@ -537,7 +538,7 @@
                 <td class="c20" colspan="1" rowspan="1">
                     <p class="c10"><span class="c8">Unten rechts auf </span><span
                             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 90.00px; height: 20.00px;"><img
-                                alt="" src="images/image4.png"
+                                alt="" src="images/add-gcal.png"
                                 style="width: 90.00px; height: 20.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
                                 title=""></span><span class="c16 c8">&nbsp;<br>tippen.</span></p>
                 </td>
@@ -560,6 +561,8 @@
         <p class="c27"><span class="c25"><a style="text-decoration: none; color: inherit;"
                     href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics">https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics</a></span>
         </p>
+        <a style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', 'Open Sans', sans-serif; color: rgb(40, 40, 40); font-size:0.5rem"
+            href="./redesign.html">New Version</a>
     </main>
 </body>
 
