sharper qr-code images

--- a/redesign.html
+++ b/redesign.html
@@ -30,8 +30,8 @@
                 </a>
                 <div class="card">
                     <h3 class="card-title">Apple Calendar (iOS)</h3>
-                    <img src="images/cali_qr-code_light.svg" alt="" class="card-img light-only">
-                    <img src="images/cali_qr-code_dark.svg" alt="" class="card-img dark-only">
+                    <img src="images/cali_qr-code_light.png" alt="" class="card-img light-only">
+                    <img src="images/cali_qr-code_dark.png" alt="" class="card-img dark-only">
                     <div class="divider"></div>
                     <p class="card-desc">Den QR Code länger gedrückt halten und “öffnen”.</p>
                 </div>
