--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             <tr class="c18">
                 <td class="c15" colspan="1" rowspan="1">
                     <p class="c12"><span class="c17"><a class="c7"
-                                href="https://calendar.google.com/calendar/embed?src=ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com&ctz=Europe%2FBerlin">Klick</a></span>
+                                href="https://calendar.google.com/calendar/embed?src=ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com&ctz=Europe%2FBerlin">Subscribe</a></span>
                     </p>
                     <p class="c13"><span
                             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 106.79px; height: 103.85px;"><a
@@ -524,8 +524,8 @@
                 </td>
                 <td class="c21" colspan="1" rowspan="1">
                     <p class="c12"><span class="c17"><a class="c7"
-                                href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics">Klick
-                                to Download</a></span></p>
+                                href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics">Download</a></span>
+                    </p>
                     <p class="c13"><span
                             style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 107.15px; height: 102.73px;"><a
                                 href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics"><img
