all card images are now pngs to ensure the desired look (blur)

--- a/redesign.html
+++ b/redesign.html
@@ -21,7 +21,7 @@
                 <a class="card"
                     href="https://calendar.google.com/calendar/embed?src=ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com&ctz=Europe%2FBerlin">
                     <h3 class="card-title">Google Calendar</h3>
-                    <img src="images/gcali_icon.svg" alt="" class="card-img">
+                    <img src="images/gcali_icon.png" alt="" class="card-img">
                     <div class="divider"></div>
                     <p class="card-desc">Unten rechts auf <img src="images/add-gcal.png" alt=""
                             style="height: 1rem; width: auto; display: inline-block; margin-bottom: -0.2rem;">
@@ -38,7 +38,7 @@
                 <a class="card"
                     href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics">
                     <h3 class="card-title">Download (.ics)</h3>
-                    <img src="images/cali_icon.svg" alt="" class="card-img">
+                    <img src="images/cali_icon.png" alt="" class="card-img">
                     <div class="divider"></div>
                     <p class="card-desc">
                         Der Kalender wird nach dem Download
