chore(docs): add code documentation
Adds code documentation for
- index.html
- redesign.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- 
+    @deprecated
+    This website was used to distribute the CampusKino HS Harz Programmkalender for different calendar apps.
+    
+    - This site - `index.html` - is the html version of a Google Docs File.
+    - Instead use `redesign.html`.
+
+    @author cody0-0 https://github.com/cody0-0/
+-->
 <html>
 
 <head>
@@ -561,6 +570,10 @@
         <p class="c27"><span class="c25"><a style="text-decoration: none; color: inherit;"
                     href="https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics">https://calendar.google.com/calendar/ical/ee1c7150134ad9facf4642a02d2f3e2f6887b674e909805c6621faf84cd6fcd8%40group.calendar.google.com/public/basic.ics</a></span>
         </p>
+        <!-- 
+            Link to the new version of this site. 
+            (redesign.html) 
+         -->
         <a style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', 'Open Sans', sans-serif; color: rgb(40, 40, 40); font-size:0.5rem"
             href="./redesign.html">New Version</a>
     </main>
